Fixed logos on smaller screen

--- a/css/agency.css
+++ b/css/agency.css
@@ -20,6 +20,14 @@ a:hover {
   color: #fec503;
 }
 
+.col-centered {
+  justify-content: center;
+}
+
+.exp-logo {
+  max-width: 60px;
+}
+
 .text-primary {
   color: #fed136 !important;
 }
