--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -15,6 +15,14 @@ a {
   }
 }
 
+.col-centered {
+  justify-content: center;
+}
+
+.exp-logo {
+  max-width: 60px;
+}
+
 .text-primary {
   color: $primary !important;
 }
